Remove html templating business.

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,6 @@
     />
   </head>
   <body>
-    <div id="lti_root" data-app-version="<%= version %>"></div>
+    <div id="lti_root"></div>
   </body>
 </html>
